K8s-yaml/probot-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: probot-consumer
  name: probot-consumer
spec:
  replicas: 5
  selector:
    matchLabels:
      io.kompose.service: probot-consumer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/probot-rabbit-network: "true"
        io.kompose.service: probot-consumer
    spec:
      containers:
        - env:
            - name: AMQP_URL
              value: amqp://guest:guest@rabbitmq:5672?connection_attempts=10&retry_delay=5
            - name: EXECUTOR
              value: Kubernetes Executor
            - name: QUEUE_NAME
              value: probot_queue
            - name: INACTIVITY
              value: 10
          image: consumer:latest
          name: consumer
          imagePullPolicy: Never
          ports:
            - containerPort: 52325
          resources: { }
          volumeMounts:
            - mountPath: /test-output
              name: test-outputs
            - mountPath: /test-suites
              name: test-suites
      restartPolicy: Always
      volumes:
        - name: test-outputs
          persistentVolumeClaim:
            claimName: test-outputs
        - name: test-suites
          hostPath:
            path: /run/desktop/mnt/host/c/users/merel.foekens/pycharmprojects/probot/suites
            type: Directory
status: { }
