K8s-yaml/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: { }
  template:
    metadata:
      labels:
        io.kompose.network/probot-rabbit-network: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3-management
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: { }
          volumeMounts:
            - mountPath: ./
              name: configuration-file

      hostname: rabbitmq
      restartPolicy: Always
      volumes:
        - name: configuration-file
          hostPath:
            path: /run/desktop/mnt/host/c/users/merel.foekens/pycharmprojects/probot/rabbitmq.conf
            type: File

status: { }
