K8s-yaml/probot-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: probot-consumer
  name: probot-consumer
spec:
  ports:
    - name: "playwright"
      port: 52325
      targetPort: 52325
  selector:
    io.kompose.service: probot-consumer
status:
  loadBalancer: { }
