K8s-yaml/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  type: NodePort
  ports:
    - name: "rabbitmq-protocol"
      port: 5672
      targetPort: 5672
      nodePort: 32000
    - name: "rabbitmq-management"
      port: 15672
      targetPort: 15672
      nodePort: 31000
  selector:
    io.kompose.service: rabbitmq
status:
  loadBalancer: { }
