K8s-yaml/probot-rabbit-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: probot-rabbit-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/probot-rabbit-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/probot-rabbit-network: "true"
